--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.1",
     "mongoose": "^8.5.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7"
   },
   "description": ""
