Se agregó el endpoint para cargar imagen

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI = mongodb+srv://Juan:2003@alpha.alynrny.mongodb.net/?retryWrites=true&w=majority&appName=Alpha
+MONGO_URI = mongodb+srv://u20212201229:1234@cluster0.oc5j6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
