--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI = mongodb+srv://Juan:2003@alpha.alynrny.mongodb.net/?retryWrites=true&w=majority&appName=Alpha
+MONGO_URI = mongodb+srv://u20231212252:nWrEybmgdBroGpK9@cluster0.ry404.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
