--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,8 +15,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.5.3",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.7"
+    "multer": "^1.4.5-lts.1"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  }
 }
