Se agregó la opción de visualizar los detalles del producto

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI = mongodb+srv://u20231212252:nWrEybmgdBroGpK9@cluster0.ry404.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = mongodb+srv://u20212201229:1234@cluster0.oc5j6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
