--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@material-tailwind/react": "^2.1.9",
     "flowbite-react": "^0.9.0",
     "multer": "^1.4.5-lts.1",
+    "pure-react-carousel": "^1.32.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.27.0",
