--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI = mongodb+srv://u20212201229:1234@cluster0.oc5j6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = mongodb+srv://u20212200958:mTpzpQ97qnfqmAkR@cluster0.i1fvk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
