--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,6 @@
-<<<<<<< HEAD
-MONGO_URI = mongodb+srv://u20212200958:mTpzpQ97qnfqmAkR@cluster0.i1fvk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-=======
-MONGO_URI = mongodb+srv://Juan:2003@alpha.alynrny.mongodb.net/?retryWrites=true&w=majority&appName=Alpha
->>>>>>> 61153b2f59ce58fbb5f9c7f900546bcacabe2639
+MONGO_URI = mongodb+srv://u20212201229:1234@cluster0.oc5j6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=pinataparty.col@gmail.com
+EMAIL_PASS=brmg dprh dqxn kprp
+JWT_SECRET=clave-secreta
